<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <RelativeLayout
        android:id="@+id/taskNameField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".activities.EditTaskActivity">

        <EditText
            android:id="@+id/fieldTaskName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:hint="@string/task_name_field"
            android:importantForAutofill="no" />

        <EditText
            android:id="@+id/fieldTaskDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:gravity="start|top"
            android:layout_below="@id/fieldTaskName"
            android:inputType="textMultiLine"
            android:hint="@string/description_field"
            android:importantForAutofill="no" />

        <EditText
            android:id="@+id/fieldTaskEnd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/fieldTaskDescription"
            android:ems="10"
            android:inputType="date"
            android:hint="@string/deadline_field"
            android:importantForAutofill="no"
            android:clickable="true"
            android:focusable="false"
            android:cursorVisible="false"/>

        <CheckBox
            android:id="@+id/fieldIsTaskFinished"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/fieldTaskEnd"
            android:text="@string/is_finished_checkbox" />

        <Button
            android:id="@+id/buttonEdit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/fieldIsTaskFinished"
            android:text="@string/edit_button" />

        <Button
            android:id="@+id/buttonDelete"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/buttonEdit"
            android:backgroundTint="@color/colorRed"
            android:textColor="@color/colorWhite"
            android:text="@string/delete_button" />

    </RelativeLayout>
</ScrollView>