<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="3dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/task_icon"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginStart="4dp"
            android:layout_marginEnd="8dp"
            app:srcCompat="@drawable/ic_baseline_list_24"
            android:contentDescription="@string/task_icon_content_description" />

        <TextView
            android:id="@+id/task_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_toEndOf="@id/task_icon"
            android:text="@string/task_title_placeholder"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/task_desc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/task_title"
            android:layout_toEndOf="@id/task_icon"
            android:text="@string/task_description_placeholder"
            android:textColor="@android:color/darker_gray"
            android:textSize="14sp"
            android:textStyle="italic" />

        <TextView
            android:id="@+id/task_deadline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="25dp"
            android:layout_marginTop="5dp"
            android:layout_alignParentEnd="true"
            android:text="@string/task_deadline_placeholder"
            android:textColor="@android:color/darker_gray"
            android:textSize="14sp"
            android:textStyle="normal" />

    </RelativeLayout>
</androidx.cardview.widget.CardView>